// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedAuthorShow Component when all publications exist should render content correctly 1`] = `
<div
  className="authorShowPageWrapper"
>
  <div
    className="rootWrapper"
  >
    <div
      className="headerBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="nameBox"
          >
            <span
              className="nameImgBoxWrapper"
            >
              <div
                className="imgBox"
              >
                H
              </div>
            </span>
            <span
              className="nameHeaderBox"
            >
              <div
                className="usernameWrapper"
              >
                <span
                  className="username"
                >
                  H. Goldschmidt
                </span>

                <div
                  aria-describedby={null}
                  className="contactIconWrapper"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Verification Author"
                >
                  <i
                    className="icon occupiedIcon"
                  />
                </div>
              </div>
              <div
                className="affiliation"
              >
                Heidelberg University
              </div>
              <div
                className="metricInformation"
              >
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    19
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Publications
                  </span>
                </div>
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    3,398
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Citations
                  </span>
                </div>
              </div>
              <div
                className="rightBox"
              />
            </span>
          </div>
          <div
            className="profileInformationSection"
          >
            <div
              className="bioSection"
            />
            <span
              className="contactSection"
            >
              <a
                className="contactIconWrapper"
                href="mailto:scshinjr@gmail.com"
                rel="noopener"
                target="_blank"
              >
                <i
                  className="icon emailIcon"
                />
              </a>
              <a
                href="mailto:scshinjr@gmail.com"
                rel="noopener"
                target="_blank"
              >
                scshinjr@gmail.com
              </a>
            </span>
          </div>
          <div
            className="tabNavigationWrapper"
          >
            <a
              className="currentTabNavigationItem"
              href="/authors/2258681040"
              onClick={[Function]}
            >
              PUBLICATIONS
            </a>
            <a
              className="tabNavigationItem"
              href="/authors/2258681040/cv"
              onClick={[Function]}
            >
              INFORMATION
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="contentBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="allPublicationHeader"
          >
            <span
              className="sectionTitle"
            >
              All Publications
            </span>
            <span
              className="countBadge"
            >
              19
            </span>
            <div
              className="rightBox"
            />
          </div>
          <div
            className="selectedPaperDescription"
          />
          <div
            className="searchSortWrapper"
          >
            <div>
              <div
                className="inputBox"
                style={
                  Object {
                    "backgroundColor": "#f8f9fb",
                    "borderColor": "#f1f3f6",
                    "borderRadius": "4px",
                    "height": "36px",
                    "width": "320px",
                  }
                }
              >
                <input
                  autoFocus={false}
                  defaultValue=""
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search paper in author's publication list"
                />
                <div
                  className="icon"
                  onClick={[Function]}
                >
                  <i
                    className="icon"
                  />
                </div>
              </div>
              <div
                className="paperCountMetadata"
              >
                1
                 page of
                1
                 pages (
                1

                results)
              </div>
            </div>
            <div
              className="rightBox"
            >
              <div
                className="sortBoxWrapper"
              >
                <div
                  className="currentOption"
                  onClick={[Function]}
                >
                  <span
                    className="sortOptionText"
                  >
                    Newest
                  </span>
                  <i
                    className="icon downArrow"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="paperItemWrapper"
          >
            <div
              className="contentSection"
            >
              <div
                className="itemWrapper"
              >
                <i
                  className="icon bookmarkIcon"
                />
                <span
                  className="subContext"
                >
                  Saved in
                </span>
                <a
                  className="collectionTitle"
                  href="/collections/22"
                  onClick={[Function]}
                >
                  Read Later
                </a>
              </div>
              <div>
                <a
                  className="title"
                  href="/papers/101"
                  onClick={[Function]}
                >
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Preparation and characterization of <b>graphene</b> oxide paper.",
                      }
                    }
                  />
                </a>
                <a
                  className="newTabIconWrapper"
                  href="/papers/101"
                  onClick={[Function]}
                  rel="noopener"
                  target="_blank"
                >
                  <i
                    className="icon newTabIcon"
                  />
                </a>
              </div>
              <div
                className="publishInfoList"
              >
                <div
                  className="venue"
                >
                  <i
                    className="icon"
                  />
                  <div
                    className="journalText"
                  >
                    <span
                      className="bold"
                    >
                      2007 in
                    </span>
                    <a
                      className="venueName"
                      href="/journals/10"
                      onClick={[Function]}
                    >
                      Nature
                    </a>
                    <span
                      className="ifLabel"
                    >
                      IF: 40.14
                    </span>
                  </div>
                </div>
                <div
                  className="author"
                >
                  <i
                    className="icon"
                  />
                  <span
                    className="authors"
                  >
                    <span
                      className="author"
                    >
                      <a
                        className="authorName"
                        href="/authors/undefined"
                        onClick={[Function]}
                      >
                        Dmitriy A. Dikin
                      </a>

                      <span>
                        ,
                      </span>
                    </span>
                    <span
                      className="author"
                    >
                      <a
                        className="authorName"
                        href="/authors/undefined"
                        onClick={[Function]}
                      >
                        Sasha Stankovich
                      </a>

                    </span>
                    <span
                      className="toggleAuthorsButton"
                      onClick={[Function]}
                    >
                      + 5 LineAuthors
                    </span>
                    <span
                      className="author"
                    >
                      <a
                        className="authorName"
                        href="/authors/undefined"
                        onClick={[Function]}
                      >
                        Rodney S. Ruoff
                      </a>

                    </span>
                  </span>
                </div>
              </div>
              <div
                className="infoList"
              >
                <a
                  className="citedButton"
                  href="/papers/101#cited"
                  onClick={[Function]}
                >
                  <span>
                    2,909 Citations
                  </span>
                </a>
                <a
                  className="sourceButton"
                  href="https://www.ncbi.nlm.nih.gov/pubmed/17653188"
                  onClick={[Function]}
                  rel="noopener"
                  target="_blank"
                >
                  <i
                    className="icon pdfIconWrapper"
                  />
                  <span>
                    Download PDF
                  </span>
                </a>
                <span
                  className="DOIMetaButtonsWrapper"
                >
                  <span
                    className="citationIconWrapper"
                    onClick={[Function]}
                  >
                    <i
                      className="icon citationIcon"
                    />
                    <span>
                      Cite
                    </span>
                  </span>
                </span>
                <button
                  className="addCollectionBtnWrapper"
                  onClick={[Function]}
                >
                  <i
                    className="icon plusIcon"
                  />
                  <span>
                    Add To Collection
                  </span>
                </button>
                <div
                  className="claimButton"
                >
                  <div>
                    <button
                      className="MuiButtonBase-root-30 MuiIconButton-root-24 additionalMenuIcon"
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex="0"
                      type="button"
                    >
                      <span
                        className="MuiIconButton-label-29"
                      >
                        <i
                          className="icon ellipsisIcon"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root-33"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="findPaperBtnWrapper"
          >
            <div
              className="findPaperBtn"
              onClick={[Function]}
            >
              Can't find your paper?
            </div>
          </div>
          <div
            className="paginationWrapper"
            style={
              Object {
                "margin": "45px 0 40px 0",
              }
            }
          >
            <div
              className="prevButtons"
            />
            <span
              className="pageItem active"
              onClick={[Function]}
            >
              1
            </span>
          </div>
        </div>
        <div
          className="rightContentWrapper"
        />
      </div>
    </div>
  </div>
  <footer
    className="footerContainer"
  >
    <div
      className="title"
    >
      <div>
        © 2019 Pluto Network. All rights reserved
      </div>
    </div>
    <div
      className="rightBox"
    >
      <a
        className="link"
        href="https://www.facebook.com/PlutoNetwork/"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Facebook
      </a>
      <a
        className="link"
        href="https://twitter.com/pluto_network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Twitter
      </a>
      <a
        className="link"
        href="https://medium.com/pluto-network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Blog
      </a>
      <a
        className="link"
        href="https://pluto.network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        About us
      </a>
      <a
        className="link"
        href="mailto:team@pluto.network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Contact us
      </a>
      <a
        className="link"
        href="https://www.notion.so/pluto/Frequently-Asked-Questions-4b4af58220aa4e00a4dabd998206325c"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        FAQ
      </a>
      <a
        className="link"
        href="https://www.notion.so/pluto/Scinapse-Updates-6a05160afde44ba1a6ed312899c23dae"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Updates
      </a>
      <a
        className="termsOfServiceLink"
        href="https://scinapse.io/terms-of-service"
      >
        Terms of service
      </a>
    </div>
  </footer>
</div>
`;

exports[`ConnectedAuthorShow Component when there is no all publications should render no publications at the content section 1`] = `
<div
  className="authorShowPageWrapper"
>
  <div
    className="rootWrapper"
  >
    <div
      className="headerBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="nameBox"
          >
            <span
              className="nameImgBoxWrapper"
            >
              <div
                className="imgBox"
              >
                H
              </div>
            </span>
            <span
              className="nameHeaderBox"
            >
              <div
                className="usernameWrapper"
              >
                <span
                  className="username"
                >
                  H. Goldschmidt
                </span>

                <div
                  aria-describedby={null}
                  className="contactIconWrapper"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Verification Author"
                >
                  <i
                    className="icon occupiedIcon"
                  />
                </div>
              </div>
              <div
                className="affiliation"
              >
                Heidelberg University
              </div>
              <div
                className="metricInformation"
              >
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    19
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Publications
                  </span>
                </div>
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    3,398
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Citations
                  </span>
                </div>
              </div>
              <div
                className="rightBox"
              />
            </span>
          </div>
          <div
            className="profileInformationSection"
          >
            <div
              className="bioSection"
            />
            <span
              className="contactSection"
            >
              <a
                className="contactIconWrapper"
                href="mailto:scshinjr@gmail.com"
                rel="noopener"
                target="_blank"
              >
                <i
                  className="icon emailIcon"
                />
              </a>
              <a
                href="mailto:scshinjr@gmail.com"
                rel="noopener"
                target="_blank"
              >
                scshinjr@gmail.com
              </a>
            </span>
          </div>
          <div
            className="tabNavigationWrapper"
          >
            <a
              className="currentTabNavigationItem"
              href="/authors/2258681040"
              onClick={[Function]}
            >
              PUBLICATIONS
            </a>
            <a
              className="tabNavigationItem"
              href="/authors/2258681040/cv"
              onClick={[Function]}
            >
              INFORMATION
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="contentBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="allPublicationHeader"
          >
            <span
              className="sectionTitle"
            >
              All Publications
            </span>
            <span
              className="countBadge"
            >
              19
            </span>
            <div
              className="rightBox"
            />
          </div>
          <div
            className="selectedPaperDescription"
          />
          <div
            className="searchSortWrapper"
          >
            <div>
              <div
                className="inputBox"
                style={
                  Object {
                    "backgroundColor": "#f8f9fb",
                    "borderColor": "#f1f3f6",
                    "borderRadius": "4px",
                    "height": "36px",
                    "width": "320px",
                  }
                }
              >
                <input
                  autoFocus={false}
                  defaultValue=""
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search paper in author's publication list"
                />
                <div
                  className="icon"
                  onClick={[Function]}
                >
                  <i
                    className="icon"
                  />
                </div>
              </div>
              <div
                className="paperCountMetadata"
              >
                1
                 page of
                1
                 pages (
                1

                results)
              </div>
            </div>
            <div
              className="rightBox"
            >
              <div
                className="sortBoxWrapper"
              >
                <div
                  className="currentOption"
                  onClick={[Function]}
                >
                  <span
                    className="sortOptionText"
                  >
                    Newest
                  </span>
                  <i
                    className="icon downArrow"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="noPaperWrapper"
          >
            <div
              className="noPaperDescription"
            >
              There is no publications.
            </div>
          </div>
          <div
            className="findPaperBtnWrapper"
          >
            <div
              className="findPaperBtn"
              onClick={[Function]}
            >
              Can't find your paper?
            </div>
          </div>
          <div
            className="paginationWrapper"
            style={
              Object {
                "margin": "45px 0 40px 0",
              }
            }
          >
            <div
              className="prevButtons"
            />
            <span
              className="pageItem active"
              onClick={[Function]}
            >
              1
            </span>
          </div>
        </div>
        <div
          className="rightContentWrapper"
        />
      </div>
    </div>
  </div>
  <footer
    className="footerContainer"
  >
    <div
      className="title"
    >
      <div>
        © 2019 Pluto Network. All rights reserved
      </div>
    </div>
    <div
      className="rightBox"
    >
      <a
        className="link"
        href="https://www.facebook.com/PlutoNetwork/"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Facebook
      </a>
      <a
        className="link"
        href="https://twitter.com/pluto_network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Twitter
      </a>
      <a
        className="link"
        href="https://medium.com/pluto-network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Blog
      </a>
      <a
        className="link"
        href="https://pluto.network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        About us
      </a>
      <a
        className="link"
        href="mailto:team@pluto.network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Contact us
      </a>
      <a
        className="link"
        href="https://www.notion.so/pluto/Frequently-Asked-Questions-4b4af58220aa4e00a4dabd998206325c"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        FAQ
      </a>
      <a
        className="link"
        href="https://www.notion.so/pluto/Scinapse-Updates-6a05160afde44ba1a6ed312899c23dae"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Updates
      </a>
      <a
        className="termsOfServiceLink"
        href="https://scinapse.io/terms-of-service"
      >
        Terms of service
      </a>
      <a
        className="privacyPolicyLink"
        href="https://scinapse.io/privacy-policy"
      >
        Privacy Policy
      </a>
    </div>
  </footer>
</div>
`;

exports[`ConnectedAuthorShow Component when try to load all publications should render loading spinner correctly 1`] = `
<div
  className="authorShowPageWrapper"
>
  <div
    className="rootWrapper"
  >
    <div
      className="headerBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="nameBox"
          >
            <span
              className="nameImgBoxWrapper"
            >
              <div
                className="imgBox"
              >
                H
              </div>
            </span>
            <span
              className="nameHeaderBox"
            >
              <div
                className="usernameWrapper"
              >
                <span
                  className="username"
                >
                  H. Goldschmidt
                </span>

                <div
                  aria-describedby={null}
                  className="contactIconWrapper"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  title="Verification Author"
                >
                  <i
                    className="icon occupiedIcon"
                  />
                </div>
              </div>
              <div
                className="affiliation"
              >
                Heidelberg University
              </div>
              <div
                className="metricInformation"
              >
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    19
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Publications
                  </span>
                </div>
                <div
                  className="metricWrapper"
                >
                  <span
                    className="metricValue"
                  >
                    3,398
                  </span>
                  <span
                    className="metricLabel"
                  >
                    Citations
                  </span>
                </div>
              </div>
              <div
                className="rightBox"
              />
            </span>
          </div>
          <div
            className="profileInformationSection"
          >
            <div
              className="bioSection"
            />
            <span
              className="contactSection"
            >
              <a
                className="contactIconWrapper"
                href="mailto:scshinjr@gmail.com"
                rel="noopener"
                target="_blank"
              >
                <i
                  className="icon emailIcon"
                />
              </a>
              <a
                href="mailto:scshinjr@gmail.com"
                rel="noopener"
                target="_blank"
              >
                scshinjr@gmail.com
              </a>
            </span>
          </div>
          <div
            className="tabNavigationWrapper"
          >
            <a
              className="currentTabNavigationItem"
              href="/authors/2258681040"
              onClick={[Function]}
            >
              PUBLICATIONS
            </a>
            <a
              className="tabNavigationItem"
              href="/authors/2258681040/cv"
              onClick={[Function]}
            >
              INFORMATION
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="contentBox"
    >
      <div
        className="container"
      >
        <div
          className="leftContentWrapper"
        >
          <div
            className="allPublicationHeader"
          >
            <span
              className="sectionTitle"
            >
              All Publications
            </span>
            <span
              className="countBadge"
            >
              19
            </span>
            <div
              className="rightBox"
            />
          </div>
          <div
            className="selectedPaperDescription"
          />
          <div
            className="searchSortWrapper"
          >
            <div>
              <div
                className="inputBox"
                style={
                  Object {
                    "backgroundColor": "#f8f9fb",
                    "borderColor": "#f1f3f6",
                    "borderRadius": "4px",
                    "height": "36px",
                    "width": "320px",
                  }
                }
              >
                <input
                  autoFocus={false}
                  defaultValue=""
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search paper in author's publication list"
                />
                <div
                  className="icon"
                  onClick={[Function]}
                >
                  <i
                    className="icon"
                  />
                </div>
              </div>
              <div
                className="paperCountMetadata"
              >
                1
                 page of
                1
                 pages (
                1

                results)
              </div>
            </div>
            <div
              className="rightBox"
            >
              <div
                className="sortBoxWrapper"
              >
                <div
                  className="currentOption"
                  onClick={[Function]}
                >
                  <span
                    className="sortOptionText"
                  >
                    Newest
                  </span>
                  <i
                    className="icon downArrow"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="spinner"
            style={
              Object {
                "margin": "170px auto",
              }
            }
          >
            <div
              className="bounce1"
            />
            <div
              className="bounce2"
            />
            <div
              className="bounce3"
            />
          </div>
          <div
            className="findPaperBtnWrapper"
          >
            <div
              className="findPaperBtn"
              onClick={[Function]}
            >
              Can't find your paper?
            </div>
          </div>
          <div
            className="paginationWrapper"
            style={
              Object {
                "margin": "45px 0 40px 0",
              }
            }
          >
            <div
              className="prevButtons"
            />
            <span
              className="pageItem active"
              onClick={[Function]}
            >
              1
            </span>
          </div>
        </div>
        <div
          className="rightContentWrapper"
        />
      </div>
    </div>
  </div>
  <footer
    className="footerContainer"
  >
    <div
      className="title"
    >
      <div>
        © 2019 Pluto Network. All rights reserved
      </div>
    </div>
    <div
      className="rightBox"
    >
      <a
        className="link"
        href="https://www.facebook.com/PlutoNetwork/"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Facebook
      </a>
      <a
        className="link"
        href="https://twitter.com/pluto_network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Twitter
      </a>
      <a
        className="link"
        href="https://medium.com/pluto-network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Blog
      </a>
      <a
        className="link"
        href="https://pluto.network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        About us
      </a>
      <a
        className="link"
        href="mailto:team@pluto.network"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Contact us
      </a>
      <a
        className="link"
        href="https://www.notion.so/pluto/Frequently-Asked-Questions-4b4af58220aa4e00a4dabd998206325c"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        FAQ
      </a>
      <a
        className="link"
        href="https://www.notion.so/pluto/Scinapse-Updates-6a05160afde44ba1a6ed312899c23dae"
        onClick={[Function]}
        rel="noopener"
        target="_blank"
      >
        Updates
      </a>
      <a
        className="termsOfServiceLink"
        href="https://scinapse.io/terms-of-service"
      >
        Terms of service
      </a>
      <a
        className="privacyPolicyLink"
        href="https://scinapse.io/privacy-policy"
      >
        Privacy Policy
      </a>
    </div>
  </footer>
</div>
`;
